--- a/index.html
+++ b/index.html
@@ -717,6 +717,10 @@
                     transportIcon = '🚗';
                     transportClass = 'trans-car';
                 }
+                else if (t.includes('飛機')) {
+                    transportIcon = '✈️';
+                    transportClass = 'trans-bts';
+                }
 
                 const highlightedNotes = highlightKeywords(event.notes);
                 
