--- a/index.html
+++ b/index.html
@@ -44,20 +44,12 @@
                     "mapURL": "https://maps.app.goo.gl/8oMdiRPceXYnsXNq8"
                 },
                 {
-                    "time": "21:30",
-                    "location": "BTS Yaek Kor Por Aor → Ratchathewi",
-                    "transport": "BTS",
-                    "cost": "58",
-                    "notes": "飯店在 Ratchathewi 站附近；1號出口",
-                    "mapURL": "https://maps.app.goo.gl/W5T2zE2Wn8Yn3g2f7"
-                },
-                {
                     "time": "22:30",
-                    "location": "抵達 飯店 BaanSu Hostel บ้านซูโฮสเทล",
+                    "location": "抵達 飯店 BaanSu Hostel",
+                    "mapURL": "https://maps.app.goo.gl/4RVqrgHZEdgMvz9M9",
                     "transport": "步行/無",
                     "cost": "0",
-                    "notes": "",
-                    "mapURL": "https://maps.app.goo.gl/4RVqrgHZEdgMvz9M9"
+                    "notes": "BTS Yaek Kor Por Aor（N23） → Ratchathewi（N1）；飯店在 Ratchathewi 站附近；1號出口；บ้านซูโฮสเทล"
                 }
             ]
         },
@@ -70,98 +62,114 @@
                 {
                     "time": "07:10-08:00",
                     "location": "ปุ้ย อาหารตามสั่ง 早餐",
+                    "mapURL": "https://maps.app.goo.gl/KQM1mnCba3ha8DuW6",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "飯店出發前用餐",
-                    "mapURL": "https://maps.app.goo.gl/A7C4Q7A9xWz5gH5F6"
+                    "notes": "飯店出發前用餐"
                 },
                 {
                     "time": "08:30-10:30",
                     "location": "大皇宮",
+                    "mapURL": "https://maps.app.goo.gl/A7gGMbr39LykyHWDA",
                     "transport": "Bolt",
                     "cost": "500",
-                    "notes": "車費預計 100-150 泰銖；門票 500 泰銖；免費廁所",
-                    "mapURL": "https://maps.app.goo.gl/A8D2Q7A9xWz5gH5F6"
+                    "notes": "車費預計 100-150 泰銖；門票 500 泰銖；免費廁所"
                 },
                 {
                     "time": "10:50-11:50",
                     "location": "Kuay Teow Kua Gai Aunty Pien 午餐",
+                    "mapURL": "https://maps.app.goo.gl/XJpHu8z5F9jbuFFo6",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "步行前往",
-                    "mapURL": "https://maps.app.goo.gl/E3J4K3P5gT2h7L2Y7"
+                    "notes": "步行前往"
                 },
                 {
                     "time": "11:55-12:40",
                     "location": "拉查波比托寺",
+                    "mapURL": "https://maps.app.goo.gl/eJLNe9hqM78wiMzW7",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "免費廁所 (注意：廁所沒衛生紙)",
-                    "mapURL": "https://maps.app.goo.gl/B9E5R7B0yXz5gK5G7"
+                    "notes": "免費廁所 (注意：廁所沒衛生紙)"
                 },
                 {
                     "time": "12:50-13:40",
                     "location": "老暹羅購物中心（換匯）",
+                    "mapURL": "https://maps.app.goo.gl/M5gtZQCsTQFXqasi6",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "可在此處換匯",
-                    "mapURL": "https://maps.app.goo.gl/C0F6S8C1zYz6gL6H8"
+                    "notes": "可在此處換匯"
                 },
                 {
                     "time": "13:55-15:10",
                     "location": "臥佛寺",
+                    "mapURL": "https://maps.app.goo.gl/PLBcvUe9xZ4awXCX6",
                     "transport": "步行",
                     "cost": "300",
-                    "notes": "門票 300 泰銖；免費廁所",
-                    "mapURL": "https://maps.app.goo.gl/D1G7T9D2aAa7gM7I9"
+                    "notes": "門票 300 泰銖；免費廁所"
+                },
+                {
+                    "time": "15:10-15:15",
+                    "location": "Tha Tien 碼頭（N8）",
+                    "mapURL": "https://maps.app.goo.gl/4RScZ4wrYMBhEjsL6",
+                    "transport": "步行",
+                    "cost": "0",
+                    "notes": ""
                 },
                 {
                     "time": "15:15-15:30",
                     "location": "Tha Tien 碼頭（N8）→ 鄭王廟",
+                    "mapURL": "https://maps.app.goo.gl/H1A4nHjXxrt4GdP78",
                     "transport": "渡輪",
                     "cost": "5",
-                    "notes": "每10分鐘一班船",
-                    "mapURL": "https://maps.app.goo.gl/E2H8U0E3bBb8gN8J0"
+                    "notes": "每10分鐘一班船"
                 },
                 {
                     "time": "15:40-16:40",
-                    "location": "ใสสะอาด ก๋วยเตี๋ยวลูกชิ้นน้ำใส 用餐",
+                    "location": "ใสสะอาด ก๋วยเตี๋ยวลูกชิ้นน้ำใส สาขาอรุณอมรินทร์ 用餐",
+                    "mapURL": "https://maps.app.goo.gl/UqDggDHZAXKzNDut6",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "步行前往",
-                    "mapURL": "https://maps.app.goo.gl/F3I9V1F4cCb9gO9K1"
+                    "notes": "步行前往"
                 },
                 {
                     "time": "16:45-18:00",
                     "location": "鄭王廟",
+                    "mapURL": "https://maps.app.goo.gl/5spoMeseArNcMB1v7",
                     "transport": "步行",
                     "cost": "200",
-                    "notes": "門票 200 泰銖；免費廁所",
-                    "mapURL": "https://maps.app.goo.gl/G4J0W2G5dDc0gP0L2"
+                    "notes": "門票 200 泰銖；免費廁所"
                 },
                 {
-                    "time": "18:10",
+                    "time": "18:00-18:10",
                     "location": "藍船 → ICONSIAM",
+                    "mapURL": "https://maps.app.goo.gl/gfMXf4mbkZkLoiEj8",
                     "transport": "船",
                     "cost": "40",
-                    "notes": "船票 40 泰銖；或搭 18:40 班次；記得坐左邊",
-                    "mapURL": "https://maps.app.goo.gl/H5K1X3H6eDe1gQ1M3"
+                    "notes": "船票 40 泰銖；或搭 18:40 班次；記得坐左邊"
                 },
                 {
-                    "time": "18:00-20:30",
+                    "time": "18:10-20:30",
                     "location": "ICONSIAM 逛街",
+                    "mapURL": "",
                     "transport": "無",
                     "cost": "0",
-                    "notes": "抵達後先去換匯；有免費廁所",
-                    "mapURL": "https://maps.app.goo.gl/I6L2Y4I7fEf2gR2N4"
+                    "notes": "抵達後先去換匯；有免費廁所"
                 },
                 {
-                    "time": "20:30",
-                    "location": "接駁船 → Sathorn碼頭 + BTS 回飯店",
-                    "transport": "船+BTS",
+                    "time": "20:30-20:40",
+                    "location": "接駁船 → Sathorn碼頭",
+                    "mapURL": "https://maps.app.goo.gl/YZsLBZR213QeEjSh9",
+                    "transport": "船",
+                    "cost": "0",
+                    "notes": "GF 2號門上船"
+                },
+                {
+                    "time": "20:40",
+                    "location": "BTS 回飯店",
+                    "mapURL": "https://maps.app.goo.gl/fwtscEvcs2djsxit8",
+                    "transport": "BTS",
                     "cost": "51",
-                    "notes": "GF 2號門上船；BTS Saphan Taksin(S6) → National Stadium(W1)；走水溝巷子回飯店",
-                    "mapURL": "https://maps.app.goo.gl/J7M3Z5J8gFg3gS3O5"
+                    "notes": "BTS Saphan Taksin(S6) → National Stadium(W1)；走水溝巷子回飯店"
                 }
             ]
         },
