--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <script>
         const originalTripData = {
-    "title": "曼谷五日完美行程 (11/27 - 12/1)",
+    "title": "曼谷五日完美行程 (11/27 - 12/1) - 已更新",
     "days": [
         {
             "day": "Day 1",
@@ -25,7 +25,7 @@
                     "mapURL": "",
                     "transport": "飛機",
                     "cost": "0",
-                    "notes": ""
+                    "notes": "起飛"
                 },
                 {
                     "time": "16:05",
@@ -41,27 +41,41 @@
                     "mapURL": "https://maps.app.goo.gl/8oMdiRPceXYnsXNq8",
                     "transport": "Bolt",
                     "cost": "250",
-                    "notes": "建議費用：160-250 泰銖 (車費)；免費廁所)；ต้องจ่ายค่าทางด่วนไหม（我需要繳過路費嗎？）"
+                    "notes": "建議費用：160-250 泰銖 (車費)；免費廁所)；需詢問是否要繳過路費：ต้องจ่ายค่าทางด่วนไหม"
+                },
+                {
+                    "time": "21:30",
+                    "location": "BTS Yaek Kor Por Aor（N23）→ Ratchathewi（N1）",
+                    "mapURL": "",
+                    "transport": "BTS",
+                    "cost": "58",
+                    "notes": "1號出口"
                 },
                 {
                     "time": "22:30",
                     "location": "抵達 飯店 BaanSu Hostel",
                     "mapURL": "https://maps.app.goo.gl/4RVqrgHZEdgMvz9M9",
                     "transport": "步行/無",
-                    "cost": "58",
-                    "notes": "BTS Yaek Kor Por Aor（N23） → Ratchathewi（N1）；飯店在 Ratchathewi 站附近；1號出口；บ้านซูโฮสเทล；\nถนนนี้ไปถึงที่นั่นไหม “Does this road come here?”（這條路會到這裡嗎？）"
+                    "cost": "0",
+                    "notes": "飯店在 Ratchathewi 站附近；บ้านซูโฮสเทล；抵達後問路：ถนนนี้ไปถึงที่นั่นไหม （這條路會到這裡嗎？）"
                 }
             ]
         },
-        
         {
             "day": "Day 2",
-            "date": "11/28 (四)",
+            "date": "11/28 (五)",
             "fullDate": "2025-11-28",
             "theme": "購物探索",
             "events": [
                 {
-                    "time": "07:50",
+                    "time": "08:00-08:40",
+                    "location": "ปุ้ย อาหารตามสั่ง 早餐",
+                    "transport": "步行",
+                    "cost": "0",
+                    "notes": "新早餐地點"
+                },
+                {
+                    "time": "08:50",
                     "location": "Saphan Hua Chang碼頭 → Pratunam 碼頭",
                     "transport": "船",
                     "cost": "11",
@@ -69,39 +83,23 @@
                     "mapURL": "https://maps.app.goo.gl/S6V2I4S7pPq2gB2X4"
                 },
                 {
-                    "time": "08:00-08:50",
-                    "location": "紅大哥水門雞飯(總店) 早餐",
+                    "time": "09:00-10:30",
+                    "location": "Grand Superrich換匯、Big C",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "步行前往",
-                    "mapURL": "https://maps.app.goo.gl/T7W3J5T8qQr3gC3Y5"
+                    "notes": "先換匯，再逛 Big C",
+                    "mapURL": "https://maps.app.goo.gl/U8X4K6U9rRs4gD4Z6" 
                 },
                 {
-                    "time": "09:00-09:50",
-                    "location": "Big C",
+                    "time": "10:35-12:00",
+                    "location": "象神、Central World、四面佛",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "",
-                    "mapURL": "https://maps.app.goo.gl/U8X4K6U9rRs4gD4Z6"
-                },
-                {
-                    "time": "10:00-11:30",
-                    "location": "象神、Central World",
-                    "transport": "步行",
-                    "cost": "0",
-                    "notes": "Central World 10點才開",
+                    "notes": "Central World 10點才開；三處景點合併參觀",
                     "mapURL": "https://maps.app.goo.gl/V9Y5L7V0sSt5gE5A7"
                 },
                 {
-                    "time": "11:40-11:50",
-                    "location": "四面佛",
-                    "transport": "步行",
-                    "cost": "0",
-                    "notes": "步行前往",
-                    "mapURL": "https://maps.app.goo.gl/W0Z6M8W1tTu6gF6B8"
-                },
-                {
-                    "time": "12:05-13:40",
+                    "time": "12:15-13:45",
                     "location": "Siam Center、暹羅廣場、20泰銖生醃海鮮",
                     "transport": "步行",
                     "cost": "0",
@@ -109,8 +107,8 @@
                     "mapURL": "https://maps.app.goo.gl/X1A7N9X2uUv7gG7C9"
                 },
                 {
-                    "time": "12:45",
-                    "location": "BTS Siam → Asok",
+                    "time": "13:50",
+                    "location": "BTS Siam（CEN）→Asok（E4）",
                     "transport": "BTS",
                     "cost": "32",
                     "notes": "4號出口",
@@ -121,12 +119,12 @@
                     "location": "Terminal 21 用餐&逛街",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "步行前往",
+                    "notes": "步行前往；可在 Asok 站下車後步行抵達",
                     "mapURL": "https://maps.app.goo.gl/Z3C9P1Z4wXx9gI9E1"
                 },
                 {
                     "time": "16:00",
-                    "location": "MRT Sukhumvit → Samyan",
+                    "location": "MRT Sukhumvit（BL22）→ Samyan（BL27）",
                     "transport": "MRT",
                     "cost": "27",
                     "notes": "2號出口",
@@ -177,7 +175,7 @@
                     "location": "Saphan Hua Chang碼頭 → Panfa Leelard 碼頭",
                     "transport": "船",
                     "cost": "12",
-                    "notes": "ท่าเรือผ่านฟ้าลีลาศ",
+                    "notes": "船票 12 泰銖；ท่าเรือผ่านฟ้าลีลาศ",
                     "mapURL": "https://maps.app.goo.gl/K8N4A6K9hGh4gT4P6"
                 },
                 {
@@ -190,7 +188,7 @@
                 },
                 {
                     "time": "10:05-11:50",
-                    "location": "南龍傳統市場 用餐",
+                    "location": "南龍傳統市場 用餐 (Nangloeng Market)",
                     "transport": "步行",
                     "cost": "0",
                     "notes": "市場內有廁所",
@@ -214,7 +212,7 @@
                 },
                 {
                     "time": "16:40",
-                    "location": "BTS Mo Chit → Ha Yaek Lat Phrao",
+                    "location": "BTS Mo Chit（N8）→ Ha Yaek Lat Phrao（N9）",
                     "transport": "BTS",
                     "cost": "15",
                     "notes": "4號出口",
@@ -223,7 +221,7 @@
                 {
                     "time": "17:00-19:00",
                     "location": "Liabduan Danneramit 夜市",
-                    "transport": "BTS",
+                    "transport": "步行/BTS",
                     "cost": "5",
                     "notes": "夜市廁所 5 泰銖",
                     "mapURL": "https://maps.app.goo.gl/Q4T0G2Q5nNo0gZ0V2"
@@ -238,7 +236,7 @@
                 },
                 {
                     "time": "20:05",
-                    "location": "BTS Ha Yaek Lat Phrao → Ratchathewi",
+                    "location": "BTS Ha Yaek Lat Phrao（N9）→ Ratchathewi（N1）",
                     "transport": "BTS",
                     "cost": "58",
                     "notes": "1號出口回飯店",
@@ -246,31 +244,23 @@
                 }
             ]
         },
-                    {
+        {
             "day": "Day 4",
             "date": "11/30 (日)",
             "fullDate": "2025-11-30",
             "theme": "寺廟與河畔",
             "events": [
                 {
-                    "time": "07:10-08:00",
-                    "location": "ปุ้ย อาหารตามสั่ง 早餐",
-                    "mapURL": "https://maps.app.goo.gl/KQM1mnCba3ha8DuW6",
-                    "transport": "步行",
-                    "cost": "0",
-                    "notes": "飯店出發前用餐"
-                },
-                {
                     "time": "08:30-10:30",
                     "location": "大皇宮",
                     "mapURL": "https://maps.app.goo.gl/A7gGMbr39LykyHWDA",
                     "transport": "Bolt",
                     "cost": "500",
-                    "notes": "車費預計 100-150 泰銖；門票 500 泰銖；免費廁所"
+                    "notes": "車費預計 100-150 泰銖；門票 500 泰銖；免費廁所。建議先在飯店附近用餐後出發。"
                 },
                 {
                     "time": "10:50-11:50",
-                    "location": "Kuay Teow Kua Gai Aunty Pien 午餐",
+                    "location": "Kuay Teow Kua Gai Aunty Pien (早午餐/午餐)",
                     "mapURL": "https://maps.app.goo.gl/XJpHu8z5F9jbuFFo6",
                     "transport": "步行",
                     "cost": "0",
@@ -306,7 +296,7 @@
                     "mapURL": "https://maps.app.goo.gl/4RScZ4wrYMBhEjsL6",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": ""
+                    "notes": "準備搭渡輪"
                 },
                 {
                     "time": "15:15-15:30",
@@ -318,11 +308,11 @@
                 },
                 {
                     "time": "15:40-16:40",
-                    "location": "ใสสะอาด ก๋วยเตี๋ยวลูกชิ้นน้ำใส สาขาอรุณอมรินทร์ 用餐",
+                    "location": "ใสสะอาด ก๋วยเตี๋ยวลูกชิ้นน้ำใส สาขาอรุณอมรินทร์ (晚餐/下午茶)",
                     "mapURL": "https://maps.app.goo.gl/UqDggDHZAXKzNDut6",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "步行前往"
+                    "notes": "在鄭王廟附近用餐"
                 },
                 {
                     "time": "16:45-18:00",
