--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <script>
         const originalTripData = {
-    "title": "曼谷五日完美行程 (11/27 - 12/1) - 已更新",
+    "title": "曼谷五日完美行程 (11/27 - 12/1)",
     "days": [
         {
             "day": "Day 1",
@@ -25,7 +25,7 @@
                     "mapURL": "",
                     "transport": "飛機",
                     "cost": "0",
-                    "notes": "起飛"
+                    "notes": ""
                 },
                 {
                     "time": "16:05",
@@ -41,41 +41,26 @@
                     "mapURL": "https://maps.app.goo.gl/8oMdiRPceXYnsXNq8",
                     "transport": "Bolt",
                     "cost": "250",
-                    "notes": "建議費用：160-250 泰銖 (車費)；免費廁所)；需詢問是否要繳過路費：ต้องจ่ายค่าทางด่วนไหม"
-                },
-                {
-                    "time": "21:30",
-                    "location": "BTS Yaek Kor Por Aor（N23）→ Ratchathewi（N1）",
-                    "mapURL": "",
-                    "transport": "BTS",
-                    "cost": "58",
-                    "notes": "1號出口"
+                    "notes": "建議費用：160-250 泰銖 (車費)；免費廁所)；ต้องจ่ายค่าทางด่วนไหม（我需要繳過路費嗎？）"
                 },
                 {
                     "time": "22:30",
                     "location": "抵達 飯店 BaanSu Hostel",
                     "mapURL": "https://maps.app.goo.gl/4RVqrgHZEdgMvz9M9",
                     "transport": "步行/無",
-                    "cost": "0",
-                    "notes": "飯店在 Ratchathewi 站附近；บ้านซูโฮสเทล；抵達後問路：ถนนนี้ไปถึงที่นั่นไหม （這條路會到這裡嗎？）"
+                    "cost": "58",
+                    "notes": "BTS Yaek Kor Por Aor（N23） → Ratchathewi（N1）；飯店在 Ratchathewi 站附近；1號出口；บ้านซูโฮสเทล；\nถนนนี้ไปถึงที่นั่นไหม “Does this road come here?”（這條路會到這裡嗎？）"
                 }
             ]
         },
         {
             "day": "Day 2",
-            "date": "11/28 (五)",
+            "date": "11/28 (四)",
             "fullDate": "2025-11-28",
             "theme": "購物探索",
             "events": [
                 {
-                    "time": "08:00-08:40",
-                    "location": "ปุ้ย อาหารตามสั่ง 早餐",
-                    "transport": "步行",
-                    "cost": "0",
-                    "notes": "新早餐地點"
-                },
-                {
-                    "time": "08:50",
+                    "time": "07:50",
                     "location": "Saphan Hua Chang碼頭 → Pratunam 碼頭",
                     "transport": "船",
                     "cost": "11",
@@ -83,23 +68,39 @@
                     "mapURL": "https://maps.app.goo.gl/S6V2I4S7pPq2gB2X4"
                 },
                 {
-                    "time": "09:00-10:30",
-                    "location": "Grand Superrich換匯、Big C",
+                    "time": "08:00-08:50",
+                    "location": "紅大哥水門雞飯(總店) 早餐",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "先換匯，再逛 Big C",
-                    "mapURL": "https://maps.app.goo.gl/U8X4K6U9rRs4gD4Z6" 
+                    "notes": "步行前往",
+                    "mapURL": "https://maps.app.goo.gl/T7W3J5T8qQr3gC3Y5"
                 },
                 {
-                    "time": "10:35-12:00",
-                    "location": "象神、Central World、四面佛",
+                    "time": "09:00-09:50",
+                    "location": "Big C",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "Central World 10點才開；三處景點合併參觀",
+                    "notes": "",
+                    "mapURL": "https://maps.app.goo.gl/U8X4K6U9rRs4gD4Z6"
+                },
+                {
+                    "time": "10:00-11:30",
+                    "location": "象神、Central World",
+                    "transport": "步行",
+                    "cost": "0",
+                    "notes": "Central World 10點才開",
                     "mapURL": "https://maps.app.goo.gl/V9Y5L7V0sSt5gE5A7"
                 },
                 {
-                    "time": "12:15-13:45",
+                    "time": "11:40-11:50",
+                    "location": "四面佛",
+                    "transport": "步行",
+                    "cost": "0",
+                    "notes": "步行前往",
+                    "mapURL": "https://maps.app.goo.gl/W0Z6M8W1tTu6gF6B8"
+                },
+                {
+                    "time": "12:05-13:40",
                     "location": "Siam Center、暹羅廣場、20泰銖生醃海鮮",
                     "transport": "步行",
                     "cost": "0",
@@ -107,8 +108,8 @@
                     "mapURL": "https://maps.app.goo.gl/X1A7N9X2uUv7gG7C9"
                 },
                 {
-                    "time": "13:50",
-                    "location": "BTS Siam（CEN）→Asok（E4）",
+                    "time": "12:45",
+                    "location": "BTS Siam → Asok",
                     "transport": "BTS",
                     "cost": "32",
                     "notes": "4號出口",
@@ -119,12 +120,12 @@
                     "location": "Terminal 21 用餐&逛街",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "步行前往；可在 Asok 站下車後步行抵達",
+                    "notes": "步行前往",
                     "mapURL": "https://maps.app.goo.gl/Z3C9P1Z4wXx9gI9E1"
                 },
                 {
                     "time": "16:00",
-                    "location": "MRT Sukhumvit（BL22）→ Samyan（BL27）",
+                    "location": "MRT Sukhumvit → Samyan",
                     "transport": "MRT",
                     "cost": "27",
                     "notes": "2號出口",
@@ -173,74 +174,74 @@
                 {
                     "time": "08:45",
                     "location": "Saphan Hua Chang碼頭 → Panfa Leelard 碼頭",
+                    "mapURL": "https://maps.app.goo.gl/9HTvdvC4obKFKnts6",
                     "transport": "船",
                     "cost": "12",
-                    "notes": "船票 12 泰銖；ท่าเรือผ่านฟ้าลีลาศ",
-                    "mapURL": "https://maps.app.goo.gl/K8N4A6K9hGh4gT4P6"
+                    "notes": "ท่าเรือผ่านฟ้าลีลาศ"
                 },
                 {
                     "time": "09:00-09:50",
                     "location": "王孫寺",
+                    "mapURL": "https://maps.app.goo.gl/2qx4Nzz8Eo6TYd3A7",
                     "transport": "步行",
                     "cost": "20",
-                    "notes": "門票 20 泰銖；收費廁所",
-                    "mapURL": "https://maps.app.goo.gl/L9O5B7L0iHi5gU5Q7"
+                    "notes": "門票 20 泰銖；收費廁所"
                 },
                 {
                     "time": "10:05-11:50",
-                    "location": "南龍傳統市場 用餐 (Nangloeng Market)",
+                    "location": "南龍傳統市場 用餐",
+                    "mapURL": "https://maps.app.goo.gl/6QVgSKC8jN6qraAv8",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "市場內有廁所",
-                    "mapURL": "https://maps.app.goo.gl/M0P6C8M1jIj6gV6R8"
+                    "notes": "市場內有廁所"
                 },
                 {
                     "time": "12:00-13:00",
                     "location": "Nangloeng Market → Wat Phai Tan (往恰圖恰方向)",
+                    "mapURL": "",
                     "transport": "Bolt/公車",
                     "cost": "160",
-                    "notes": "車費預計 130-160 泰銖",
-                    "mapURL": "https://maps.app.goo.gl/N1Q7D9N2kJk7gW7S9"
+                    "notes": "車費預計 130-160 泰銖"
                 },
                 {
                     "time": "13:10-16:30",
                     "location": "Chatuchak 週末市集",
+                    "mapURL": "https://maps.app.goo.gl/zx5PYNH7xp8kNzfLA",
                     "transport": "無",
                     "cost": "0",
-                    "notes": "百貨公司內有廁所",
-                    "mapURL": "https://maps.app.goo.gl/O2R8E0O3lLl8gX8T0"
+                    "notes": "百貨公司內有廁所"
                 },
                 {
                     "time": "16:40",
-                    "location": "BTS Mo Chit（N8）→ Ha Yaek Lat Phrao（N9）",
+                    "location": "BTS Mo Chit → Ha Yaek Lat Phrao",
+                    "mapURL": "",
                     "transport": "BTS",
                     "cost": "15",
-                    "notes": "4號出口",
-                    "mapURL": "https://maps.app.goo.gl/P3S9F1P4mMm9gY9U1"
+                    "notes": "4號出口"
                 },
                 {
                     "time": "17:00-19:00",
                     "location": "Liabduan Danneramit 夜市",
-                    "transport": "步行/BTS",
+                    "mapURL": "https://maps.app.goo.gl/Q5YWVxmA8V8xNQky5",
+                    "transport": "BTS",
                     "cost": "5",
-                    "notes": "夜市廁所 5 泰銖",
-                    "mapURL": "https://maps.app.goo.gl/Q4T0G2Q5nNo0gZ0V2"
+                    "notes": "夜市廁所 5 泰銖"
                 },
                 {
                     "time": "19:05-20:00",
                     "location": "Lotus’s Lat Phrao 超市",
+                    "mapURL": "https://maps.app.goo.gl/9i6xLL4ZEvHuZX6d7",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "免費廁所",
-                    "mapURL": "https://maps.app.goo.gl/R5U1H3R6oOp1gA1W3"
+                    "notes": "免費廁所"
                 },
                 {
                     "time": "20:05",
-                    "location": "BTS Ha Yaek Lat Phrao（N9）→ Ratchathewi（N1）",
+                    "location": "BTS Ha Yaek Lat Phrao → Ratchathewi",
+                    "mapURL": "",
                     "transport": "BTS",
                     "cost": "58",
-                    "notes": "1號出口回飯店",
-                    "mapURL": "https://maps.app.goo.gl/W5T2zE2Wn8Yn3g2f7"
+                    "notes": "1號出口回飯店"
                 }
             ]
         },
@@ -251,16 +252,24 @@
             "theme": "寺廟與河畔",
             "events": [
                 {
+                    "time": "07:10-08:00",
+                    "location": "ปุ้ย อาหารตามสั่ง 早餐",
+                    "mapURL": "https://maps.app.goo.gl/KQM1mnCba3ha8DuW6",
+                    "transport": "步行",
+                    "cost": "0",
+                    "notes": "飯店出發前用餐"
+                },
+                {
                     "time": "08:30-10:30",
                     "location": "大皇宮",
                     "mapURL": "https://maps.app.goo.gl/A7gGMbr39LykyHWDA",
                     "transport": "Bolt",
                     "cost": "500",
-                    "notes": "車費預計 100-150 泰銖；門票 500 泰銖；免費廁所。建議先在飯店附近用餐後出發。"
+                    "notes": "車費預計 100-150 泰銖；門票 500 泰銖；免費廁所"
                 },
                 {
                     "time": "10:50-11:50",
-                    "location": "Kuay Teow Kua Gai Aunty Pien (早午餐/午餐)",
+                    "location": "Kuay Teow Kua Gai Aunty Pien 午餐",
                     "mapURL": "https://maps.app.goo.gl/XJpHu8z5F9jbuFFo6",
                     "transport": "步行",
                     "cost": "0",
@@ -296,7 +305,7 @@
                     "mapURL": "https://maps.app.goo.gl/4RScZ4wrYMBhEjsL6",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "準備搭渡輪"
+                    "notes": ""
                 },
                 {
                     "time": "15:15-15:30",
@@ -308,11 +317,11 @@
                 },
                 {
                     "time": "15:40-16:40",
-                    "location": "ใสสะอาด ก๋วยเตี๋ยวลูกชิ้นน้ำใส สาขาอรุณอมรินทร์ (晚餐/下午茶)",
+                    "location": "ใสสะอาด ก๋วยเตี๋ยวลูกชิ้นน้ำใส สาขาอรุณอมรินทร์ 用餐",
                     "mapURL": "https://maps.app.goo.gl/UqDggDHZAXKzNDut6",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "在鄭王廟附近用餐"
+                    "notes": "步行前往"
                 },
                 {
                     "time": "16:45-18:00",
@@ -373,26 +382,26 @@
                 {
                     "time": "10:45-11:40",
                     "location": "Prasat Nakhon Luang",
+                    "mapURL": "https://maps.app.goo.gl/T4XBoZhYw8G6umrt9",
                     "transport": "包車",
                     "cost": "20",
-                    "notes": "門票 20 泰銖",
-                    "mapURL": "https://maps.app.goo.gl/E8H4U6E92C24gN4J6"
+                    "notes": "門票 20 泰銖"
                 },
                 {
                     "time": "12:00-13:00",
                     "location": "Kung Phuean Praew 午餐",
+                    "mapURL": "https://maps.app.goo.gl/Steo4JcNdiS2rkzp9",
                     "transport": "包車",
                     "cost": "0",
-                    "notes": "午餐地點",
-                    "mapURL": "https://maps.app.goo.gl/F9I5V7F03D35gO5K7"
+                    "notes": "午餐地點"
                 },
                 {
                     "time": "13:15-14:10",
                     "location": "崖差蒙空寺",
+                    "mapURL": "https://maps.app.goo.gl/wBedJu1YvJfGAw7M6",
                     "transport": "包車",
                     "cost": "0",
-                    "notes": "",
-                    "mapURL": "https://maps.app.goo.gl/G0J6W8G14E46gP6L8"
+                    "notes": ""
                 },
                 {
                     "time": "14:20-14:40",
@@ -405,50 +414,50 @@
                 {
                     "time": "14:55-15:40",
                     "location": "柴瓦塔那蘭寺",
+                    "mapURL": "https://maps.app.goo.gl/vYWqGfLC6jRALCzEA",
                     "transport": "包車",
                     "cost": "80",
-                    "notes": "門票 80 泰銖",
-                    "mapURL": "https://maps.app.goo.gl/I2L8Y0I36G68gR8N0"
+                    "notes": "門票 80 泰銖"
                 },
                 {
                     "time": "15:50-16:05",
                     "location": "Roti Sai Mai Abeedeen-Pranom Sangaroon 糖絲卷餅",
+                    "mapURL": "https://maps.app.goo.gl/Q8vzJbu4oypvtsNt9",
                     "transport": "包車",
                     "cost": "0",
-                    "notes": "大城特色甜點",
-                    "mapURL": "https://maps.app.goo.gl/J3M9Z1J47H79gS9O1"
+                    "notes": "大城特色甜點"
                 },
                 {
                     "time": "16:10-16:50",
                     "location": "Pa Lek Boat Noodle 晚餐",
+                    "mapURL": "https://maps.app.goo.gl/gPtuwsvJEyiR9mo2A",
                     "transport": "包車",
                     "cost": "0",
-                    "notes": "晚餐地點",
-                    "mapURL": "https://maps.app.goo.gl/K4N0A2K58I80gT0P2"
+                    "notes": "晚餐地點"
                 },
                 {
                     "time": "16:55-18:00",
                     "location": "瑪哈泰寺",
+                    "mapURL": "https://maps.app.goo.gl/88s6ZQkrSbwUwry58",
                     "transport": "步行",
                     "cost": "80",
-                    "notes": "門票 80 泰銖；注意：17點前要入場",
-                    "mapURL": "https://maps.app.goo.gl/L5O1B3L69J91gU1Q3"
+                    "notes": "門票 80 泰銖；注意：17點前要入場"
                 },
                 {
                     "time": "18:05-19:10",
                     "location": "Ong Gaan Tolasap 夜市",
+                    "mapURL": "https://maps.app.goo.gl/zAtkmgiKMjabvyxu9",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "大城夜市",
-                    "mapURL": "https://maps.app.goo.gl/M6P2C4M70K02gV2R4"
+                    "notes": "大城夜市"
                 },
                 {
                     "time": "20:30",
                     "location": "DMK 機場",
+                    "mapURL": "https://maps.app.goo.gl/XEcdjEe9dxrpWvsR6",
                     "transport": "包車",
                     "cost": "0",
-                    "notes": "搭乘包車前往機場",
-                    "mapURL": "https://maps.app.goo.gl/95a5gB9D4gS7pT786"
+                    "notes": "搭乘包車前往機場"
                 }
             ]
         }
