--- a/index.html
+++ b/index.html
@@ -60,92 +60,84 @@
             "theme": "購物探索",
             "events": [
                 {
-                    "time": "07:10-08:00",
+                    "time": "08:00-08:10",
                     "location": "ปุ้ย อาหารตามสั่ง 早餐",
                     "mapURL": "https://maps.app.goo.gl/KQM1mnCba3ha8DuW6",
                     "transport": "步行",
                     "cost": "0",
-                    "notes": "飯店出發前用餐"
+                    "notes": ""
                 },
                 {
-                    "time": "07:50",
+                    "time": "08:50",
                     "location": "Saphan Hua Chang碼頭 → Pratunam 碼頭",
                     "transport": "船",
                     "cost": "11",
                     "notes": "船票 11 泰銖；ท่าเรือประตูน้ำ",
-                    "mapURL": "https://maps.app.goo.gl/S6V2I4S7pPq2gB2X4"
+                    "mapURL": "https://maps.app.goo.gl/cFProxMxw1SshFdL8"
                 },
                 {
-                    "time": "08:00-08:50",
-                    "location": "紅大哥水門雞飯(總店) 早餐",
+                    "time": "09:00-09:30",
+                    "location": "Grand Superrich換匯",
                     "transport": "步行",
                     "cost": "0",
                     "notes": "步行前往",
-                    "mapURL": "https://maps.app.goo.gl/T7W3J5T8qQr3gC3Y5"
+                    "mapURL": "https://maps.app.goo.gl/4xpb8jh8b5wAn8uf8"
                 },
                 {
-                    "time": "09:00-09:50",
+                    "time": "09:30-10:30",
                     "location": "Big C",
                     "transport": "步行",
                     "cost": "0",
                     "notes": "",
-                    "mapURL": "https://maps.app.goo.gl/U8X4K6U9rRs4gD4Z6"
+                    "mapURL": "https://maps.app.goo.gl/CbMoUvckVezo2Day9"
                 },
                 {
-                    "time": "10:00-11:30",
+                    "time": "10:30-11:40",
                     "location": "象神、Central World",
                     "transport": "步行",
                     "cost": "0",
                     "notes": "Central World 10點才開",
-                    "mapURL": "https://maps.app.goo.gl/V9Y5L7V0sSt5gE5A7"
+                    "mapURL": "https://maps.app.goo.gl/NrcaKHXyhsXWvET4A"
                 },
                 {
-                    "time": "11:40-11:50",
+                    "time": "11:40-12:00",
                     "location": "四面佛",
                     "transport": "步行",
                     "cost": "0",
                     "notes": "步行前往",
-                    "mapURL": "https://maps.app.goo.gl/W0Z6M8W1tTu6gF6B8"
+                    "mapURL": "https://maps.app.goo.gl/BxTUyirb7iHzWAxCA"
                 },
                 {
-                    "time": "12:05-13:40",
+                    "time": "12:15-13:45",
                     "location": "Siam Center、暹羅廣場、20泰銖生醃海鮮",
                     "transport": "步行",
                     "cost": "0",
                     "notes": "午餐/逛街",
-                    "mapURL": "https://maps.app.goo.gl/X1A7N9X2uUv7gG7C9"
+                    "mapURL": "https://maps.app.goo.gl/KcudWuaC1ggNgHhf8"
                 },
                 {
-                    "time": "12:45",
-                    "location": "BTS Siam → Asok",
+                    "time": "13:50",
+                    "location": "BTS Siam（CEN）→ Asok（E4）",
                     "transport": "BTS",
                     "cost": "32",
                     "notes": "4號出口",
-                    "mapURL": "https://maps.app.goo.gl/Y2B8O0Y3vVw8gH8D0"
+                    "mapURL": ""
                 },
                 {
-                    "time": "14:05-16:00",
+                    "time": "14:10-16:20",
                     "location": "Terminal 21 用餐&逛街",
                     "transport": "步行",
                     "cost": "0",
                     "notes": "步行前往",
-                    "mapURL": "https://maps.app.goo.gl/Z3C9P1Z4wXx9gI9E1"
+                    "mapURL": "https://maps.app.goo.gl/SksHVhrP9dQqB6sv5"
                 },
                 {
                     "time": "16:00",
-                    "location": "MRT Sukhumvit → Samyan",
+                    "location": "MRT Sukhumvit（BL22）→Hua Lamphong（BL28）",
                     "transport": "MRT",
                     "cost": "27",
-                    "notes": "2號出口",
-                    "mapURL": "https://maps.app.goo.gl/A4D0Q2A5xYy0gJ0F2"
-                },
-                {
-                    "time": "16:40-17:00",
-                    "location": "Samyan Market",
-                    "transport": "步行",
-                    "cost": "0",
-                    "notes": "市場 17點關門，需注意時間",
-                    "mapURL": "https://maps.app.goo.gl/B5E1R3B6zZz1gK1G3"
+                    "notes": "3號出口",
+                    "mapURL": ""
                 },
                 {
                     "time": "17:05-18:30",
@@ -153,7 +145,7 @@
                     "transport": "步行",
                     "cost": "0",
                     "notes": "步行前往",
-                    "mapURL": "https://maps.app.goo.gl/C6F2S4C70A02gL2H4"
+                    "mapURL": "https://maps.app.goo.gl/TTe8VaJ6NU5vztoQ6"
                 },
                 {
                     "time": "18:30-20:30",
@@ -161,7 +153,7 @@
                     "transport": "步行",
                     "cost": "0",
                     "notes": "步行前往",
-                    "mapURL": "https://maps.app.goo.gl/D7G3T5D81B13gM3I5"
+                    "mapURL": ""
                 },
                 {
                     "time": "20:40",
@@ -169,7 +161,7 @@
                     "transport": "步行",
                     "cost": "0",
                     "notes": "步行回飯店",
-                    "mapURL": ""
+                    "mapURL": "https://maps.app.goo.gl/4RVqrgHZEdgMvz9M9"
                 }
             ]
         },
