--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     "location": "抵達 飯店 BaanSu Hostel",
                     "mapURL": "https://maps.app.goo.gl/4RVqrgHZEdgMvz9M9",
                     "transport": "步行/無",
-                    "cost": "",
+                    "cost": "0",
                     "notes": "บ้านซูโฮสเทล；\nถนนนี้ไปถึงที่นั่นไหม “Does this road come here?”（這條路會到這裡嗎？）"
                 }
             ]
@@ -268,14 +268,6 @@
             "theme": "寺廟與河畔",
             "events": [
                 {
-                    "time": "07:10-08:00",
-                    "location": "ปุ้ย อาหารตามสั่ง 早餐",
-                    "mapURL": "https://maps.app.goo.gl/KQM1mnCba3ha8DuW6",
-                    "transport": "步行",
-                    "cost": "0",
-                    "notes": "飯店出發前用餐"
-                },
-                {
                     "time": "08:30-10:30",
                     "location": "大皇宮",
                     "mapURL": "https://maps.app.goo.gl/A7gGMbr39LykyHWDA",
@@ -285,14 +277,14 @@
                 },
                 {
                     "time": "10:50-11:50",
-                    "location": "Kuay Teow Kua Gai Aunty Pien 午餐",
-                    "mapURL": "https://maps.app.goo.gl/XJpHu8z5F9jbuFFo6",
+                    "location": "ครัวพี่น้อง อาหารตามสั่ง 午餐",
+                    "mapURL": "https://maps.app.goo.gl/2benCaRwUvNQp7bN7",
                     "transport": "步行",
                     "cost": "0",
                     "notes": "步行前往"
                 },
                 {
-                    "time": "11:55-12:40",
+                    "time": "11:55-13:00",
                     "location": "拉查波比托寺",
                     "mapURL": "https://maps.app.goo.gl/eJLNe9hqM78wiMzW7",
                     "transport": "步行",
@@ -300,15 +292,7 @@
                     "notes": "免費廁所 (注意：廁所沒衛生紙)"
                 },
                 {
-                    "time": "12:50-13:40",
-                    "location": "老暹羅購物中心（換匯）",
-                    "mapURL": "https://maps.app.goo.gl/M5gtZQCsTQFXqasi6",
-                    "transport": "步行",
-                    "cost": "0",
-                    "notes": "可在此處換匯"
-                },
-                {
-                    "time": "13:55-15:10",
+                    "time": "13:15-14:55",
                     "location": "臥佛寺",
                     "mapURL": "https://maps.app.goo.gl/PLBcvUe9xZ4awXCX6",
                     "transport": "步行",
@@ -316,7 +300,7 @@
                     "notes": "門票 300 泰銖；免費廁所"
                 },
                 {
-                    "time": "15:10-15:15",
+                    "time": "15:05-15:20",
                     "location": "Tha Tien 碼頭（N8）",
                     "mapURL": "https://maps.app.goo.gl/4RScZ4wrYMBhEjsL6",
                     "transport": "步行",
@@ -324,7 +308,7 @@
                     "notes": ""
                 },
                 {
-                    "time": "15:15-15:30",
+                    "time": "15:05-15:20",
                     "location": "Tha Tien 碼頭（N8）→ 鄭王廟",
                     "mapURL": "https://maps.app.goo.gl/H1A4nHjXxrt4GdP78",
                     "transport": "渡輪",
@@ -332,7 +316,7 @@
                     "notes": "每10分鐘一班船"
                 },
                 {
-                    "time": "15:40-16:40",
+                    "time": "15:30-16:20",
                     "location": "ใสสะอาด ก๋วยเตี๋ยวลูกชิ้นน้ำใส สาขาอรุณอมรินทร์ 用餐",
                     "mapURL": "https://maps.app.goo.gl/UqDggDHZAXKzNDut6",
                     "transport": "步行",
@@ -340,7 +324,7 @@
                     "notes": "步行前往"
                 },
                 {
-                    "time": "16:45-18:00",
+                    "time": "16:30-18:00",
                     "location": "鄭王廟",
                     "mapURL": "https://maps.app.goo.gl/5spoMeseArNcMB1v7",
                     "transport": "步行",
@@ -474,7 +458,15 @@
                     "transport": "包車",
                     "cost": "0",
                     "notes": "搭乘包車前往機場"
-                }
+                },
+                {
+                    "time": "2:45",
+                    "location": "Thai Lion Air SL390",
+                    "mapURL": "",
+                    "transport": "飛機",
+                    "cost": "0",
+                    "notes": ""
+                },
             ]
         }
     ]
