--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
     <header class="app-header">
         <div class="header-top">
             <div class="header-titles">
-                <h1>曼谷五日完美行程</h1>
+                <h1>曼谷五日自由行</h1>
                 <p class="subtitle">11/27 (四) - 12/1 (一)</p>
             </div>
             
@@ -1506,6 +1506,23 @@
         }
         .add-event-btn:hover {
             background-color: #27AE60;
+        }
+
+        /* 🚀 Icon Button Styles */
+        .icon-btn {
+            width: 38px;
+            height: 38px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 0;
+            border-radius: 50%;
+            transition: background-color 0.2s, color 0.2s;
+            color: white;
+            flex-shrink: 0; /* 防止圖標被壓縮 */
         }
 
         /* 複製按鈕 (預設為灰色背景) */
