--- a/index.html
+++ b/index.html
@@ -548,9 +548,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="event-note-url-input">備註連結 (可選)</label>
-                    <input type="url" id="event-note-url-input">
-                </div>
+                    <label for="event-note-url-input">備註連結 (可選，例如預訂網址)</label>
+                    <input type="url" id="event-note-url-input">
+                </div>
 
                 <div class="form-group">
                     <label for="event-transport-input">交通方式 (例如: 步行, BTS, Bolt)</label>
@@ -798,9 +798,7 @@
                 // 備註連結圖標和連結
                 const noteIconHTML = event.noteURL ? `
                     <a href="${event.noteURL}" target="_blank" class="note-icon" title="查看備註連結">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
-                            <path d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zm-4 15c0 .55-.45 1-1 1H7c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1h2c.55 0 1 .45 1 1v2zm0-4c0 .55-.45 1-1 1H7c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1h2c.55 0 1 .45 1 1v2zm6 4c0 .55-.45 1-1 1h-2c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1h2c.55 0 1 .45 1 1v2zm0-4c0 .55-.45 1-1 1h-2c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1h2c.55 0 1 .45 1 1v2z"/>
-                        </svg>
+                        🚀
                     </a>
                 ` : '';
 
