--- a/index.html
+++ b/index.html
@@ -812,6 +812,7 @@
                     <div class="event-location-group">
                         <div class="event-location">${event.location}</div>
                         ${mapIconHTML}
+                        ${noteIconHTML}
                     </div>
                     
                     <div class="event-details">
