--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                     "transport": "步行",
                     "cost": "0",
                     "notes": "",
-                    "mapURL": "https://maps.app.goo.gl/CbMoUvckVezo2Day9"
+                    "mapURL": "https://maps.app.goo.gl/CbMoUvckVezo2Day9", 
+                    "noteURL": "https://www.youtube.com/watch?v=ZRgRyB1Gdqk"
                 },
                 {
                     "time": "10:30-11:40",
@@ -1349,6 +1350,17 @@
             color: var(--accent-color);
         }
 
+        /* 備註連結圖標 */
+        .note-icon {
+            transition: color 0.2s;
+            flex-shrink: 0;
+            display: block;
+            text-decoration: none;
+        }
+        
+        .note-icon:hover {
+            color: var(--accent-color);
+        }
 
         /* Event Body */
 
